Small changes + Python demo:
