# python-flask-server-generated/swagger_server/swagger/swagger.yaml
@@ -6,7 +6,7 @@ info:
   version: 1.0.0
 servers:
 - url: http://127.0.0.1:8080
-  description: Local development server
+  description: Local server
 security:
 - BearerAuth:
   - read:beverages
@@ -1501,6 +1501,10 @@ components:
           items:
             type: string
             format: uuid
+        links:
+          type: array
+          items:
+            $ref: '#/components/schemas/BeverageLinks'
       example:
         labelId: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         containerTypeId: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
@@ -1509,6 +1513,11 @@ components:
         ingredients:
         - 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         - 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+        links:
+        - rel: self
+          href: href
+        - rel: self
+          href: href
         id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
     Brand:
       required:
@@ -1629,6 +1638,9 @@ components:
         href:
           type: string
           description: Hyperlink reference.
+      example:
+        rel: self
+        href: href
     ErrorResponse:
       type: object
       properties:
@@ -1654,6 +1666,11 @@ components:
           ingredients:
           - 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           - 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+          links:
+          - rel: self
+            href: href
+          - rel: self
+            href: href
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         - labelId: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           containerTypeId: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
@@ -1662,6 +1679,11 @@ components:
           ingredients:
           - 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           - 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+          links:
+          - rel: self
+            href: href
+          - rel: self
+            href: href
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         links:
         - rel: self
